<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * @author: Rachel Stinnett and Nees Abusaada
 * @file: fragment_main_trip_screen.xml
 * @assignment: Final Programming Assignment- Traveling Viewer
 * @course: CSC 317; Spring 2022
 * @description: The purpose of this app is to  implement a traveling log app.
 * This app is specific to users who want to make traveling their hobby and
 * create a fun way to save travel memories. In order to do that, the user
 * will be able to keep track of places they have been around the world,
 * add pictures of those places to save memories, add contacts to the app
 * to share stuff with other people, and make reflective notes. The application
 * will have multiple screens, buttons, texts, and images, all of which follow
 * a specific style. This program does this by incorporating the use of fragments
 * and activities. The GoogleMaps API is used to display the locations the user
 * pins as well as the locations of the photos and notes taken. In addition,
 * the Wikipedia API is used to display a webpage if the user clicks on a
 * location in the list. The data is contained in ArrayLists which makes
 * it applicable to store in text files (.txt) using internal storage. Content
 * providers are used in order to gather the contacts data for sharing. Explicit
 * intents are used for sending emails, SMS messages and taking photos. In this
 * fragment_main_trip_screen.xml is where the layout for the main trip screen
 * is created. This xml uses various elements like buttons, text views, edit
 * texts, and list views to achieve this. A constraint layout was used to adapt
 * better to various screen sizes and tablets.
 */
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainTripScreenFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/startScreenMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/layoutBackgroundColor">

        <Button
            android:id="@+id/helpButton"
            android:layout_width="61dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/mainScreenHelpColor"
            android:text="@string/helpButton"
            android:textColor="@color/textColor"
            android:textSize="4pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.542"
            app:layout_constraintStart_toEndOf="@+id/title"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/title"
            android:layout_width="326dp"
            android:layout_height="76dp"
            android:fontFamily="@font/knewave"
            android:text="@string/appTitle"
            android:textColor="@color/textColor"
            android:textSize="18pt"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/helpButton"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="364dp"
            android:layout_height="81dp"
            android:layout_marginTop="36dp"
            android:hint="@string/enterTrip"
            android:textColor="@color/textColor"
            android:textSize="10pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/helpButton" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="84dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/mainScreenAddColor"
            android:text="@string/buttonText1"
            android:textColor="@color/textColor"
            android:textSize="5pt"
            app:layout_constraintBottom_toTopOf="@+id/highlightsButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/deleteButton"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="84dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/mainScreenDeleteColor"
            android:text="@string/buttonText2"
            android:textColor="@color/textColor"
            android:textSize="5pt"
            app:layout_constraintBottom_toTopOf="@+id/highlightsButton"
            app:layout_constraintLeft_toRightOf="@id/addButton"
            app:layout_constraintRight_toLeftOf="@id/nextButton"
            app:layout_constraintTop_toBottomOf="@+id/editText" />


        <Button
            android:id="@+id/nextButton"
            android:layout_width="84dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/mainScreenNextColor"
            android:text="@string/nextButton"
            android:textColor="@color/textColor"
            android:textSize="5pt"
            app:layout_constraintBottom_toTopOf="@+id/highlightsButton"
            app:layout_constraintLeft_toRightOf="@id/deleteButton"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <Button
            android:id="@+id/highlightsButton"
            android:layout_width="150dp"
            android:layout_height="42dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/mainScreenHighlightColor"
            android:text="@string/highlightButton"
            android:textColor="@color/textColor"
            android:textSize="5pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deleteButton"
            app:layout_constraintBottom_toTopOf="@+id/listView"/>

        <ListView
            android:id="@+id/listView"
            android:layout_width="375dp"
            android:layout_height="400dp"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/highlightsButton"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>