<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * @author: Rachel Stinnett and Nees Abusaada
 * @file: fragment_notes.xml
 * @assignment: Final Programming Assignment- Traveling Viewer
 * @course: CSC 317; Spring 2022
 * @description: The purpose of this app is to  implement a traveling log app.
 * This app is specific to users who want to make traveling their hobby and
 * create a fun way to save travel memories. In order to do that, the user
 * will be able to keep track of places they have been around the world,
 * add pictures of those places to save memories, add contacts to the app
 * to share stuff with other people, and make reflective notes. The application
 * will have multiple screens, buttons, texts, and images, all of which follow
 * a specific style. This program does this by incorporating the use of fragments
 * and activities. The GoogleMaps API is used to display the locations the user
 * pins as well as the locations of the photos and notes taken. In addition,
 * the Wikipedia API is used to display a webpage if the user clicks on a
 * location in the list. The data is contained in ArrayLists which makes
 * it applicable to store in text files (.txt) using internal storage. Content
 * providers are used in order to gather the contacts data for sharing. Explicit
 * intents are used for sending emails, SMS messages and taking photos. In this
 * fragment_notes is layout for when the user want to add notes or memories to
 * the notes fragment. This is done by using text views, edit texts, buttons,
 * image views, and list views. A constraint layout was used to adapt better to
 * various screen sizes and tablets.
 */
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotesFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/notesScreenLayout"
        android:background="@color/notesBackgroundColor">
        <TextView
            android:id="@+id/notesTitle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sofadi_one"
            android:text="@string/notesTitle"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:textSize="18pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/notesScreenLayout"
            app:layout_constraintBottom_toTopOf="@id/editText2"/>
        <EditText
            android:id="@+id/editText2"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:hint="@string/enterNote"
            android:textColor="@color/textColor"
            android:textSize="8pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/addButton2"
            app:layout_constraintTop_toBottomOf="@id/notesTitle"
            app:layout_constraintBottom_toTopOf="@id/travelImage"/>

        <Button
            android:id="@+id/addButton2"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:backgroundTint="@color/notesAdd"
            android:text="@string/buttonText1"
            android:textColor="@color/textColor"
            android:textSize="10pt"
            app:layout_constraintLeft_toRightOf="@id/editText2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notesTitle"
            app:layout_constraintBottom_toTopOf="@id/travelImage"/>

        <ImageView
            android:id="@+id/travelImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/editText2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/shareButton"
            android:src="@drawable/earth"/>

        <Button
            android:id="@+id/deleteButton2"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/notesDelete"
            android:text="@string/buttonText2"
            android:textColor="@color/textColor"
            android:textSize="5pt"
            app:layout_constraintBottom_toTopOf="@id/notesListView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/shareButton"
            app:layout_constraintTop_toBottomOf="@id/travelImage" />

        <Button
            android:id="@+id/shareButton"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="5dp"
            android:text="@string/shareButton"
            android:textSize="5pt"
            android:textColor="@color/textColor"
            android:backgroundTint="@color/notesShare"
            app:layout_constraintLeft_toRightOf="@id/deleteButton2"
            app:layout_constraintRight_toLeftOf="@id/mapButton"
            app:layout_constraintTop_toBottomOf="@id/travelImage"
            app:layout_constraintBottom_toTopOf="@id/notesListView"/>
        <Button
            android:id="@+id/mapButton"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="5dp"
            android:text="@string/mapButton"
            android:textSize="5pt"
            android:textColor="@color/textColor"
            android:backgroundTint="@color/notesMap"
            app:layout_constraintLeft_toRightOf="@id/shareButton"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/travelImage"
            app:layout_constraintBottom_toTopOf="@id/notesListView"/>
        <ListView
            android:id="@+id/notesListView"
            android:layout_width="400dp"
            android:layout_height="270dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="5dp"
            android:background="#39682A77"
            app:layout_constraintTop_toBottomOf="@id/deleteButton2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>