<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * @author: Rachel Stinnett and Nees Abusaada
 * @file: fragment_options_screen.xml
 * @assignment: Final Programming Assignment- Traveling Viewer
 * @course: CSC 317; Spring 2022
 * @description: The purpose of this app is to  implement a traveling log app.
 * This app is specific to users who want to make traveling their hobby and
 * create a fun way to save travel memories. In order to do that, the user
 * will be able to keep track of places they have been around the world,
 * add pictures of those places to save memories, add contacts to the app
 * to share stuff with other people, and make reflective notes. The application
 * will have multiple screens, buttons, texts, and images, all of which follow
 * a specific style. This program does this by incorporating the use of fragments
 * and activities. The GoogleMaps API is used to display the locations the user
 * pins as well as the locations of the photos and notes taken. In addition,
 * the Wikipedia API is used to display a webpage if the user clicks on a
 * location in the list. The data is contained in ArrayLists which makes
 * it applicable to store in text files (.txt) using internal storage. Content
 * providers are used in order to gather the contacts data for sharing. Explicit
 * intents are used for sending emails, SMS messages and taking photos. In this
 * fragment_options_screen.xml is where the layout is created with the four
 * buttons and two image views. The buttons are laid out in that way by
 * using a constraint layout to keep an organized format. A constraint layout was used
 * to adapt better to various screen sizes and tablets.
 */
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsScreenFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/optionsSearchLayout"
        android:background="@color/layoutBackgroundColor">

        <Button
            android:id="@+id/locationButton"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="140dp"
            android:backgroundTint="@color/optionsLocationColor"
            android:text="@string/locationButton"
            android:textColor="@color/textColor"
            android:textSize="8pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/optionsSearchLayout"
            app:layout_constraintBottom_toTopOf="@id/photosButton"/>

        <Button
            android:id="@+id/photosButton"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/optionsMemoryColor"
            android:text="@string/photosButton"
            android:textColor="@color/textColor"
            android:textSize="8pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/locationButton"
            app:layout_constraintBottom_toTopOf="@id/notesButton"/>

        <Button
            android:id="@+id/notesButton"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/optionsNotesColor"
            android:text="@string/notesButton"
            android:textColor="@color/textColor"
            android:textSize="10pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/photosButton"
            app:layout_constraintBottom_toTopOf="@id/helpButton2"/>

        <Button
            android:id="@+id/helpButton2"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/optionsHelpColor"
            android:text="@string/helpButton"
            android:textColor="@color/textColor"
            android:textSize="10pt"
            app:layout_constraintBottom_toTopOf="@+id/imageView7"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notesButton"
            app:layout_constraintRight_toRightOf="parent"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:src="@drawable/backgroundtop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:src="@drawable/backgroundbuttom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>